temporary fix for index header on mobile view

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,12 +27,12 @@ button:hover {
 
 .mobile-only { display: none }
 @media (max-width: 600px) { 
-    .mobile-only { display: block } 
+    /* .mobile-only { display: block }  */
 }
 
 .desktop-only { display: none }
 @media (min-width: 601px) { 
-    .desktop-only { display: flex } 
+    /* .desktop-only { display: flex }  */
 }
 
 /* HEADER */
